--- a/force-app/main/default/aura/DPFeed/DPFeed.css
+++ b/force-app/main/default/aura/DPFeed/DPFeed.css
@@ -193,6 +193,7 @@
 .THIS .action-text-container {
     display: block;
     margin-bottom: 5px;
+        font-size: 13px;
 }
 
 .THIS .action-header{
@@ -222,6 +223,7 @@
 .THIS .action-sla-container {
     padding: 8px;
     display: flex;
+    font-size: 13px;
 }
 
 .THIS .inlineitem {
@@ -312,22 +314,38 @@
 }
 
 .THIS .submenuitem {
-    display:flex;
-    padding-left:16px;
-    font-size: 14px;
-    font-weight: 300;
+       display: flex;
+    justify-content: space-between;
+    /* padding-left: 16px; */
+    font-size: .9rem;
+    font-weight: 700;
     align-items: center;
-    color: #706E6B;
-    width: 100%;
-    height: 60px;
-    border-bottom: solid 1px #DEE1E3;
+    color: #212121;
+    width: 90%;
+    height: 50px;
+    border-top: solid 1px #dee1e3;
+    /* padding: 5px; */
+    margin: 5%;
+}
+.THIS .submenuitem:nth-child(1) {
+    border-top: 0;
 }
 
 .THIS .submenucontent{
-    background-color:#F6F6F6;
-    border-bottom: solid 1px #DEE1E3;
+    margin: 10px;
+    padding: 10px;
+    margin-top: 0;
+    padding-top: 0;
+    /* border-bottom: solid 1px #dee1e3; */
 }
 
+.THIS .submenucontent .slds-checkbox_faux{
+    width: 1.3rem;
+    height: 1.3rem;
+}
+.THIS .submenucontent .slds-checkbox {
+    margin-bottom: 10px;
+}
 .THIS .icon-action-color .slds-icon-text-default {
     fill: #50E3C2;
 }
@@ -381,3 +399,15 @@
     font-size: 1.1rem;
     font-weight: 400;
 }
+
+
+.THIS .feed-filter-container{
+    border-radius: 4px;
+    margin: 20px 5px;
+    border: 1px solid #dfe4e0;
+}
+
+.THIS .filter-arrow{
+       margin-right: 15px;
+}
+
