--- a/force-app/main/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
+++ b/force-app/main/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
@@ -109,3 +109,55 @@
     font-size: 0.8rem;
     color: rgb(0, 30, 80);
 }
+
+
+/* Sales Desk styling */
+
+.THIS .greeting-container h3{
+    font-size: 2rem;
+    width: 1040px;
+}
+
+
+.THIS .content-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.THIS .content-container{
+    width: 1040px;
+    display: flex;
+    flex-direction: row;
+}
+
+/* Feed container */
+
+.THIS .salesdeck-feed{
+    border-radius: 4px;
+    margin: 20px 5px;
+    border: 1px solid #dfe4e0;
+    box-shadow: 0 0 8px 1px rgba(15,34,80,.05);
+    width: 66%;
+}
+
+.THIS .feed-header{
+    height: 70px;
+    border-bottom: 1px solid #dfe4e0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.THIS .feed-header{
+    font-size: 1.1rem;
+}
+
+/* Navigation */
+.THIS .sales-menu-wrapper{
+    border-radius: 4px;
+    margin: 20px 15px;
+    border: 1px solid #dfe4e0;
+    box-shadow: 0 0 8px 1px rgba(15,34,80,.05);
+}
