--- a/force-app/main/default/aura/DPFeed/DPFeed.css
+++ b/force-app/main/default/aura/DPFeed/DPFeed.css
@@ -388,6 +388,7 @@
 
 .THIS .feed-container{
     width: 100%;
+    height: 180px;
     display: flex;
     flex-direction: row;
 }
@@ -405,6 +406,7 @@
     border-radius: 4px;
     margin: 20px 5px;
     border: 1px solid #dfe4e0;
+        box-shadow: 0 0 8px 1px rgba(15,34,80,.05);
 }
 
 .THIS .filter-arrow{
