--- a/force-app/main/default/aura/orgActivityLog/orgActivityLog.css
+++ b/force-app/main/default/aura/orgActivityLog/orgActivityLog.css
@@ -9,6 +9,17 @@
     border-right:1px solid #F0F0F0;
 }
 
+.THIS .border-left {
+    border-left:1px solid #F0F0F0;
+}
+
+.THIS .message-image {
+    border: 1px solid #f0f0f0;
+    border-radius: 8px;
+    height: 256px !important;
+    width: auto !important;
+    max-width: unset !important;
+}
 .THIS .date {
     color:#9B9B9B;
     margin-top:2px;
