--- a/force-app/main/default/aura/assignVehicleModalContent/assignVehicleModalContent.cmp
+++ b/force-app/main/default/aura/assignVehicleModalContent/assignVehicleModalContent.cmp
@@ -1,11 +1,33 @@
 <aura:component implements="flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes" controller="TestDriveModalController" access="global" >
     <aura:attribute name="tdid" type="String" />
     <aura:attribute name="tddate" type="DateTime" />
-    <aura:attribute name="tdenddate" type="DateTime" />
+    <aura:attribute name="tdtime" type="DateTime" />
     
     <div class="slds-p-around_medium">
-    	<div class="section-heading">Appointment Details</div>
+        <div class="section-heading">Appointment Details</div>
+        
+
         <div class="subtitle">time and date</div>
+                <div class="infoblock-wrapper">
+                        <div class="slds-form-element infoblock">
+                                <label class="slds-form-element__label" >Date</label>
+                                <div class="slds-form-element__control">
+                                  <input type="text" placeholder="{!v.tddate}" disabled="true" class="slds-input" />
+                                </div>
+                            </div>
+                            <div class="slds-form-element infoblock">
+                                <label class="slds-form-element__label" >Time</label>
+                                <div class="slds-form-element__control">
+                                  <input type="text" placeholder="{!v.tdtime}" disabled="true" class="slds-input" />
+                                </div>
+                            </div>
+                </div>
+                
+
+                <!--
+        <div class="subtitle">time and date</div>
+
+
         <div class="infoblock">
             <div class="icon">
                 <lightning:icon iconName="utility:dayview" size="xx-small" />
@@ -21,7 +43,9 @@
             <div class="icon-text">
                 <lightning:formattedDateTime value="{!v.tddate}" hour="2-digit" minute="2-digit" />&nbsp;-&nbsp;<lightning:formattedDateTime value="{!v.tdenddate}" hour="2-digit" minute="2-digit" />
             </div>
-        </div>
+        </div>-->
+
+
         <div class="subtitle">Available vehicles of type <a>I.D. Crozz</a></div>
         
         <c:VehicleSelectionChoice colorURL="{!'background-image:url(' + $Resource.colorRed + ')'}" 
