--- a/force-app/main/default/lwc/vwButton/vwButton.css
+++ b/force-app/main/default/lwc/vwButton/vwButton.css
@@ -11,45 +11,44 @@
     color: #001e50;
     text-decoration: underline;
     text-decoration: none;
+    padding: 10px 40px;
 }
 
 
 .c-button--primary {
-    padding: .75em 2.5em;
+    /* padding: .75em 2.5em; */
     border-radius: 2em;
-    background: #00b0f0;
-    border: 2px solid #00b0f0;
+    color: white;
+    background: #001e50;
+ 
 }
 
 .c-button--primary.is-current,.c-button--primary:focus,.c-button--primary:hover,.m-action-card-module.is-current .c-button--primary,.m-action-card-module:focus .c-button--primary,.m-action-card-module:hover .c-button--primary{
-    background:#fff;
-    color:#00b0f0
+    background:rgb(6,64,194);
 }
 
 
 .c-button--primary-inverted{
     text-decoration:none;
-    padding:.75em 2.5em;
+    /* padding:.75em 2.5em; */
     border-radius:2em;
     background:transparent;
-    border:2px solid #001e50
+    border:2px solid #001e50;
+    color: #001e50;
 }
 .c-button--primary-inverted.is-current,.c-button--primary-inverted:focus,.c-button--primary-inverted:hover{
-    background:#001e50;
-    color:#fff
+    border:2px solid rgb(6,64,194);
+    color: rgb(6,64,194);
 }
 
 
 .c-button--secondary{
     text-decoration:none;
-    padding:.75em 2.5em;
+    /* padding:.75em 2.5em; */
     border-radius:2em;
-    background:#001e50;
-    border:2px solid #001e50;
-    color:#fff
+    background:white;
+    color:#001e50
 }
 .c-button--secondary.is-current,.c-button--secondary:focus,.c-button--secondary:hover{
-    background:transparent;
-    border-color:#001e50;
-    color:#001e50
+    background:rgb(81,198,242);
 }
